bootstrapping the menu

--- a/templates/dashboard/base.html
+++ b/templates/dashboard/base.html
@@ -41,26 +41,17 @@
                                     </li><!-- .nk-menu-item -->
                                     <li class="nk-menu-item has-sub">
                                         <a href="#" class="nk-menu-link nk-menu-toggle">
-                                            <span class="nk-menu-text">Apps</span>
+                                            <span class="nk-menu-text">Quick Action</span>
                                         </a>
                                         <ul class="nk-menu-sub">
                                             <li class="nk-menu-item">
-                                                <a href="html/apps-messages.html" class="nk-menu-link"><span class="nk-menu-text">Messages</span></a>
+                                                <a href="html/apps-messages.html" class="nk-menu-link"><span class="nk-menu-text">Personal Cloud</span></a>
                                             </li>
                                             <li class="nk-menu-item">
-                                                <a href="html/apps-inbox.html" class="nk-menu-link"><span class="nk-menu-text">Inbox / Mail</span></a>
+                                                <a href="html/apps-inbox.html" class="nk-menu-link"><span class="nk-menu-text">CSIS Email</span></a>
                                             </li>
                                             <li class="nk-menu-item">
-                                                <a href="html/apps-file-manager.html" class="nk-menu-link"><span class="nk-menu-text">File Manager</span></a>
-                                            </li>
-                                            <li class="nk-menu-item">
-                                                <a href="html/apps-chats.html" class="nk-menu-link"><span class="nk-menu-text">Chats / Messenger</span></a>
-                                            </li>
-                                            <li class="nk-menu-item">
-                                                <a href="html/apps-calendar.html" class="nk-menu-link"><span class="nk-menu-text">Calendar</span></a>
-                                            </li>
-                                            <li class="nk-menu-item">
-                                                <a href="html/apps-kanban.html" class="nk-menu-link"><span class="nk-menu-text">Kanban Board</span></a>
+                                                <a href="html/apps-file-manager.html" class="nk-menu-link"><span class="nk-menu-text">Archive</span></a>
                                             </li>
                                         </ul><!-- .nk-menu-sub -->
                                     </li><!-- .nk-menu-item -->
@@ -421,14 +412,14 @@
                                         <li class="nk-menu-item has-sub">
                                             <a href="#" class="nk-menu-link nk-menu-toggle">
                                                 <span class="nk-menu-icon"><em class="icon ni ni-card-view"></em></span>
-                                                <span class="nk-menu-text">CSIS Library</span>
+                                                <span class="nk-menu-text">Knowledge<br>Repository</span>
                                             </a>
                                             <ul class="nk-menu-sub">
                                                 <li class="nk-menu-item">
                                                     <a href="html/product-list.html" class="nk-menu-link"><span class="nk-menu-text">E-Library</span></a>
                                                 </li>
                                                 <li class="nk-menu-item">
-                                                    <a href="html/product-card.html" class="nk-menu-link"><span class="nk-menu-text">Catalogue</span></a>
+                                                    <a href="html/product-card.html" class="nk-menu-link"><span class="nk-menu-text">Library</span></a>
                                                 </li>
                                                 <li class="nk-menu-item">
                                                     <a href="html/product-details.html" class="nk-menu-link"><span class="nk-menu-text">Subscriptions</span></a>
@@ -456,13 +447,22 @@
                                         <li class="nk-menu-item">
                                             <a href="html/email-templates.html" class="nk-menu-link">
                                                 <span class="nk-menu-icon"><em class="icon ni ni-text-rich"></em></span>
-                                                <span class="nk-menu-text">F.A.Q</span>
+                                                <span class="nk-menu-text">F.A.Qs<br>
+                                                <small>Frequently Asked Question</small></span>
                                             </a>
                                         </li>
                                         <li class="nk-menu-item">
                                             <a href="html/components.html" class="nk-menu-link">
                                                 <span class="nk-menu-icon"><em class="icon ni ni-layers"></em></span>
-                                                <span class="nk-menu-text">Wiki</span>
+                                                <span class="nk-menu-text">Wiki<br>
+                                                <small>Centralized Knowledge Hub for CSIS</small></span>
+                                            </a>
+                                        </li>
+                                        <li class="nk-menu-item">
+                                            <a href="html/components.html" class="nk-menu-link">
+                                                <span class="nk-menu-icon"><em class="icon ni ni-question-alt"></em></span>
+                                                <span class="nk-menu-text">Help<br>
+                                                </span>
                                             </a>
                                         </li>
                                     </ul><!-- .nk-menu -->
