bootstrapping the menu

--- a/templates/dashboard/base.html
+++ b/templates/dashboard/base.html
@@ -91,21 +91,10 @@
                                                 <li>
                                                     <a href="#" class="language-item">
                                                         <img src="{% static 'dashboard/images/flags/spanish.png' %}" alt="" class="language-flag">
-                                                        <span class="language-name">Español</span>
+                                                        <span class="language-name">Bahasa Indonesia</span>
                                                     </a>
                                                 </li>
-                                                <li>
-                                                    <a href="#" class="language-item">
-                                                        <img src="{% static 'dashboard/images/flags/french.png' %}" alt="" class="language-flag">
-                                                        <span class="language-name">Français</span>
-                                                    </a>
-                                                </li>
-                                                <li>
-                                                    <a href="#" class="language-item">
-                                                        <img src="{% static 'dashboard/images/flags/turkey.png' %}" alt="" class="language-flag">
-                                                        <span class="language-name">Türkçe</span>
-                                                    </a>
-                                                </li>
+                                                
                                             </ul>
                                         </div>
                                     </li><!-- .dropdown -->
@@ -282,7 +271,7 @@
                                         </li><!-- .nk-menu-item -->
                                     </ul><!-- .nk-menu -->
                                     <ul class="nk-menu">
-                                        
+
                                         <li class="nk-menu-heading">
                                             <h6 class="overline-title text-primary-alt">Dashboards</h6>
                                         </li><!-- .nk-menu-heading -->
@@ -290,7 +279,7 @@
                                             <a href="html/index-analytics.html" class="nk-menu-link">
                                                 <span class="nk-menu-icon"><em class="icon ni ni-globe"></em></span>
                                                 <span class="nk-menu-text">Website</span>
-                                                
+
                                             </a>
                                         </li><!-- .nk-menu-item -->
                                         <li class="nk-menu-item">
@@ -315,18 +304,18 @@
                                             <a href="html/index-analytics.html" class="nk-menu-link">
                                                 <span class="nk-menu-icon"><em class="icon ni ni-contact"></em></span>
                                                 <span class="nk-menu-text">Stakeholder Relationship<br> Management (SRM)</span>
-                                                
+
                                             </a>
                                         </li><!-- .nk-menu-item -->
                                         <li class="nk-menu-item">
                                             <a href="html/index-analytics.html" class="nk-menu-link">
                                                 <span class="nk-menu-icon"><em class="icon ni ni-share-alt"></em></span>
                                                 <span class="nk-menu-text">Data Warehouse</span>
-                                                
+
                                             </a>
                                         </li><!-- .nk-menu-item -->
-                                        
-                                        
+
+
                                         <li class="nk-menu-heading">
                                             <h6 class="overline-title text-primary-alt">Office Management</h6>
                                         </li><!-- .nk-menu-heading -->
@@ -370,7 +359,7 @@
                                         <li class="nk-menu-item">
                                             <a href="#" class="nk-menu-link">
                                                 <span class="nk-menu-icon"><em class="icon ni ni-msg"></em></span>
-                                               
+
                                                 <span class="nk-menu-text">AI Chat</span><span class="nk-menu-badge">New</span>
                                             </a>
                                         </li><!-- .nk-menu-item -->
@@ -406,7 +395,7 @@
                                                 <li class="nk-menu-item">
                                                     <a href="html/support-kb-details.html" class="nk-menu-link"><span class="nk-menu-text">Software List</span></a>
                                                 </li>
-                                                
+
                                             </ul><!-- .nk-menu-sub -->
                                         </li><!-- .nk-menu-item -->
                                         <li class="nk-menu-item has-sub">
@@ -472,9 +461,9 @@
                                 </div><!-- .nk-aside-close -->
                             </div><!-- .nk-aside -->
                             {% block content %}
-                            
+
                             {% endblock %}
-                            
+
                         </div>
                     </div>
                 </div>
