--- a/templates/dashboard/events/base.html
+++ b/templates/dashboard/events/base.html
@@ -208,21 +208,21 @@
                                             </a>
                                         </li>
                                         <li class="nk-menu-item">
-                                            <a href="{% url 'project:detail-progress' %}" class="nk-menu-link">
+                                            <a href="html/subscription/subscriptions.html" class="nk-menu-link">
                                                 <span class="nk-menu-icon"><em class="icon ni ni-file-text"></em></span>
-                                                <span class="nk-menu-text">Progress</span>
+                                                <span class="nk-menu-text">Event List</span>
                                             </a>
                                         </li>
                                         <li class="nk-menu-item">
                                             <a href="html/subscription/payments.html" class="nk-menu-link">
                                                 <span class="nk-menu-icon"><em class="icon ni ni-report-profit"></em></span>
-                                                <span class="nk-menu-text">Budget</span>
+                                                <span class="nk-menu-text">Ticket</span>
                                             </a>
                                         </li>
                                         <li class="nk-menu-item">
                                             <a href="html/subscription/team-access.html" class="nk-menu-link">
                                                 <span class="nk-menu-icon"><em class="icon ni ni-users"></em></span>
-                                                <span class="nk-menu-text">Manage Team</span>
+                                                <span class="nk-menu-text">Speakers</span>
                                             </a>
                                         </li>
                                         <li class="nk-menu-item">
@@ -445,8 +445,6 @@
     <!-- JavaScript -->
     <script src="{% static 'dashboard/assets/js/bundle.js' %}"></script>
     <script src="{% static 'dashboard/assets/js/scripts.js' %}"></script>
-    {% block js %}
-    {% endblock %}
 </body>
 
 </html>
