--- a/templates/dashboard/project/index.html
+++ b/templates/dashboard/project/index.html
@@ -84,7 +84,7 @@
                                                                     </div>
                                                                 </td>
                                                                 <td class="nk-tb-col">
-                                                                    <a href="html/apps-kanban.html" class="project-title">
+                                                                    <a href="{% url 'project:detail' %}" class="project-title">
                                                                         <div class="user-avatar sq bg-purple"><span>DD</span></div>
                                                                         <div class="project-info">
                                                                             <h6 class="title">Dashlite Development</h6>
@@ -128,7 +128,7 @@
                                                                                 <a href="#" class="dropdown-toggle btn btn-sm btn-icon btn-trigger" data-bs-toggle="dropdown"><em class="icon ni ni-more-h"></em></a>
                                                                                 <div class="dropdown-menu dropdown-menu-end">
                                                                                     <ul class="link-list-opt no-bdr">
-                                                                                        <li><a href="html/apps-kanban.html"><em class="icon ni ni-eye"></em><span>View Project</span></a></li>
+                                                                                        <li><a href="{% url 'project:detail' %}"><em class="icon ni ni-eye"></em><span>View Project</span></a></li>
                                                                                         <li><a href="#"><em class="icon ni ni-edit"></em><span>Edit Project</span></a></li>
                                                                                         <li><a href="#"><em class="icon ni ni-check-round-cut"></em><span>Mark As Done</span></a></li>
                                                                                     </ul>
@@ -146,7 +146,7 @@
                                                                     </div>
                                                                 </td>
                                                                 <td class="nk-tb-col">
-                                                                    <a href="html/apps-kanban.html" class="project-title">
+                                                                    <a href="{% url 'project:detail' %}" class="project-title">
                                                                         <div class="user-avatar sq bg-warning"><span>RW</span></div>
                                                                         <div class="project-info">
                                                                             <h6 class="title">Redesign Website</h6>
@@ -187,7 +187,7 @@
                                                                                 <a href="#" class="dropdown-toggle btn btn-sm btn-icon btn-trigger" data-bs-toggle="dropdown"><em class="icon ni ni-more-h"></em></a>
                                                                                 <div class="dropdown-menu dropdown-menu-end">
                                                                                     <ul class="link-list-opt no-bdr">
-                                                                                        <li><a href="html/apps-kanban.html"><em class="icon ni ni-eye"></em><span>View Project</span></a></li>
+                                                                                        <li><a href="{% url 'project:detail' %}"><em class="icon ni ni-eye"></em><span>View Project</span></a></li>
                                                                                         <li><a href="#"><em class="icon ni ni-edit"></em><span>Edit Project</span></a></li>
                                                                                         <li><a href="#"><em class="icon ni ni-check-round-cut"></em><span>Mark As Done</span></a></li>
                                                                                     </ul>
@@ -205,7 +205,7 @@
                                                                     </div>
                                                                 </td>
                                                                 <td class="nk-tb-col">
-                                                                    <a href="html/apps-kanban.html" class="project-title">
+                                                                    <a href="{% url 'project:detail' %}" class="project-title">
                                                                         <div class="user-avatar sq bg-info"><span>KR</span></div>
                                                                         <div class="project-info">
                                                                             <h6 class="title">Keyword Research for SEO</h6>
@@ -243,7 +243,7 @@
                                                                                 <a href="#" class="dropdown-toggle btn btn-sm btn-icon btn-trigger" data-bs-toggle="dropdown"><em class="icon ni ni-more-h"></em></a>
                                                                                 <div class="dropdown-menu dropdown-menu-end">
                                                                                     <ul class="link-list-opt no-bdr">
-                                                                                        <li><a href="html/apps-kanban.html"><em class="icon ni ni-eye"></em><span>View Project</span></a></li>
+                                                                                        <li><a href="{% url 'project:detail' %}"><em class="icon ni ni-eye"></em><span>View Project</span></a></li>
                                                                                         <li><a href="#"><em class="icon ni ni-edit"></em><span>Edit Project</span></a></li>
                                                                                         <li><a href="#"><em class="icon ni ni-check-round-cut"></em><span>Mark As Done</span></a></li>
                                                                                     </ul>
@@ -261,7 +261,7 @@
                                                                     </div>
                                                                 </td>
                                                                 <td class="nk-tb-col">
-                                                                    <a href="html/apps-kanban.html" class="project-title">
+                                                                    <a href="{% url 'project:detail' %}" class="project-title">
                                                                         <div class="user-avatar sq bg-danger"><span>WD</span></div>
                                                                         <div class="project-info">
                                                                             <h6 class="title">Website Development</h6>
@@ -302,7 +302,7 @@
                                                                                 <a href="#" class="dropdown-toggle btn btn-sm btn-icon btn-trigger" data-bs-toggle="dropdown"><em class="icon ni ni-more-h"></em></a>
                                                                                 <div class="dropdown-menu dropdown-menu-end">
                                                                                     <ul class="link-list-opt no-bdr">
-                                                                                        <li><a href="html/apps-kanban.html"><em class="icon ni ni-eye"></em><span>View Project</span></a></li>
+                                                                                        <li><a href="{% url 'project:detail' %}"><em class="icon ni ni-eye"></em><span>View Project</span></a></li>
                                                                                         <li><a href="#"><em class="icon ni ni-edit"></em><span>Edit Project</span></a></li>
                                                                                         <li><a href="#"><em class="icon ni ni-check-round-cut"></em><span>Mark As Done</span></a></li>
                                                                                     </ul>
@@ -320,7 +320,7 @@
                                                                     </div>
                                                                 </td>
                                                                 <td class="nk-tb-col">
-                                                                    <a href="html/apps-kanban.html" class="project-title">
+                                                                    <a href="{% url 'project:detail' %}" class="project-title">
                                                                         <div class="user-avatar sq bg-blue"><span>SO</span></div>
                                                                         <div class="project-info">
                                                                             <h6 class="title">SEO Optimization</h6>
@@ -361,7 +361,7 @@
                                                                                 <a href="#" class="dropdown-toggle btn btn-sm btn-icon btn-trigger" data-bs-toggle="dropdown"><em class="icon ni ni-more-h"></em></a>
                                                                                 <div class="dropdown-menu dropdown-menu-end">
                                                                                     <ul class="link-list-opt no-bdr">
-                                                                                        <li><a href="html/apps-kanban.html"><em class="icon ni ni-eye"></em><span>View Project</span></a></li>
+                                                                                        <li><a href="{% url 'project:detail' %}"><em class="icon ni ni-eye"></em><span>View Project</span></a></li>
                                                                                         <li><a href="#"><em class="icon ni ni-edit"></em><span>Edit Project</span></a></li>
                                                                                         <li><a href="#"><em class="icon ni ni-check-round-cut"></em><span>Mark As Done</span></a></li>
                                                                                     </ul>
@@ -379,7 +379,7 @@
                                                                     </div>
                                                                 </td>
                                                                 <td class="nk-tb-col">
-                                                                    <a href="html/apps-kanban.html" class="project-title">
+                                                                    <a href="{% url 'project:detail' %}" class="project-title">
                                                                         <div class="user-avatar sq bg-purple"><span>DD</span></div>
                                                                         <div class="project-info">
                                                                             <h6 class="title">Dashlite Development</h6>
@@ -420,7 +420,7 @@
                                                                                 <a href="#" class="dropdown-toggle btn btn-sm btn-icon btn-trigger" data-bs-toggle="dropdown"><em class="icon ni ni-more-h"></em></a>
                                                                                 <div class="dropdown-menu dropdown-menu-end">
                                                                                     <ul class="link-list-opt no-bdr">
-                                                                                        <li><a href="html/apps-kanban.html"><em class="icon ni ni-eye"></em><span>View Project</span></a></li>
+                                                                                        <li><a href="{% url 'project:detail' %}"><em class="icon ni ni-eye"></em><span>View Project</span></a></li>
                                                                                         <li><a href="#"><em class="icon ni ni-edit"></em><span>Edit Project</span></a></li>
                                                                                         <li><a href="#"><em class="icon ni ni-check-round-cut"></em><span>Mark As Done</span></a></li>
                                                                                     </ul>
@@ -438,7 +438,7 @@
                                                                     </div>
                                                                 </td>
                                                                 <td class="nk-tb-col">
-                                                                    <a href="html/apps-kanban.html" class="project-title">
+                                                                    <a href="{% url 'project:detail' %}" class="project-title">
                                                                         <div class="user-avatar sq bg-danger"><span>WD</span></div>
                                                                         <div class="project-info">
                                                                             <h6 class="title">Website Development</h6>
@@ -479,7 +479,7 @@
                                                                                 <a href="#" class="dropdown-toggle btn btn-sm btn-icon btn-trigger" data-bs-toggle="dropdown"><em class="icon ni ni-more-h"></em></a>
                                                                                 <div class="dropdown-menu dropdown-menu-end">
                                                                                     <ul class="link-list-opt no-bdr">
-                                                                                        <li><a href="html/apps-kanban.html"><em class="icon ni ni-eye"></em><span>View Project</span></a></li>
+                                                                                        <li><a href="{% url 'project:detail' %}"><em class="icon ni ni-eye"></em><span>View Project</span></a></li>
                                                                                         <li><a href="#"><em class="icon ni ni-edit"></em><span>Edit Project</span></a></li>
                                                                                         <li><a href="#"><em class="icon ni ni-check-round-cut"></em><span>Mark As Done</span></a></li>
                                                                                     </ul>
@@ -497,7 +497,7 @@
                                                                     </div>
                                                                 </td>
                                                                 <td class="nk-tb-col">
-                                                                    <a href="html/apps-kanban.html" class="project-title">
+                                                                    <a href="{% url 'project:detail' %}" class="project-title">
                                                                         <div class="user-avatar sq bg-warning"><span>RW</span></div>
                                                                         <div class="project-info">
                                                                             <h6 class="title">Redesign Website</h6>
@@ -538,7 +538,7 @@
                                                                                 <a href="#" class="dropdown-toggle btn btn-sm btn-icon btn-trigger" data-bs-toggle="dropdown"><em class="icon ni ni-more-h"></em></a>
                                                                                 <div class="dropdown-menu dropdown-menu-end">
                                                                                     <ul class="link-list-opt no-bdr">
-                                                                                        <li><a href="html/apps-kanban.html"><em class="icon ni ni-eye"></em><span>View Project</span></a></li>
+                                                                                        <li><a href="{% url 'project:detail' %}"><em class="icon ni ni-eye"></em><span>View Project</span></a></li>
                                                                                         <li><a href="#"><em class="icon ni ni-edit"></em><span>Edit Project</span></a></li>
                                                                                         <li><a href="#"><em class="icon ni ni-check-round-cut"></em><span>Mark As Done</span></a></li>
                                                                                     </ul>
