--- a/templates/dashboard/base.html
+++ b/templates/dashboard/base.html
@@ -301,7 +301,7 @@
                                             </a>
                                         </li><!-- .nk-menu-item -->
                                         <li class="nk-menu-item">
-                                            <a href="html/index-analytics.html" class="nk-menu-link">
+                                            <a href="{% url 'web:index-srm' %}" class="nk-menu-link">
                                                 <span class="nk-menu-icon"><em class="icon ni ni-contact"></em></span>
                                                 <span class="nk-menu-text">Stakeholder Relationship<br> Management (SRM)</span>
 
@@ -326,7 +326,7 @@
                                             </a>
                                             <ul class="nk-menu-sub">
                                                 <li class="nk-menu-item">
-                                                    <a href="html/project-card.html" class="nk-menu-link"><span class="nk-menu-text">Assets List</span></a>
+                                                    <a href="{% url 'web:index-asset' %}" class="nk-menu-link"><span class="nk-menu-text">Assets List</span></a>
                                                 </li>
                                                 <li class="nk-menu-item">
                                                     <a href="html/project-list.html" class="nk-menu-link"><span class="nk-menu-text">Asset Availability</span></a>
