--- a/static/dashboard/assets/css/theme.css
+++ b/static/dashboard/assets/css/theme.css
@@ -6,3 +6,16 @@
  * Version	 :	1.0.0
  * Updated	 :	07.23.2020
 **/
+
+.chat-item.active .chat-link:hover {
+    text-decoration: underline;
+    cursor: pointer;
+}
+.chat-item .chat-link {
+    display: block;
+    color: inherit;
+    text-decoration: none;
+}
+.chat-item .chat-link:hover {
+    background-color: #f5f6fa;
+}
